Fix jump info message on click (#8996)

--- a/src/sass/components/message/messageView.scss
+++ b/src/sass/components/message/messageView.scss
@@ -38,6 +38,13 @@
     }
 }
 
+.message-expand-right-info {
+    position: absolute;
+    z-index: 8;
+    right: 0.75em;
+    top: 0;
+}
+
 .conversationHeader-about {
     position: absolute;
     right: 0;
